# vw-euda-mqtt

./: .dockerignore  .gitignore  CHANGELOG.md  DOCKERHUB.md  Dockerfile  LICENSE  README.de.md  README.md  SECURITY.md  config.example.json  docker-compose.example.yml  docker-compose.yml  evcc.md  history.md  homeassistant.md  openhab.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_point.yml
.github/workflows/: docker-image.yml  tests.yml
evcc/: mqtt-vehicle.example.yaml
homeassistant/: mqtt-autodiscovery.example.json
openhab/: vw-euda-mqtt.items  vw-euda-mqtt.things  vwgroup-vehicle2mqtt-history.items  vwgroup-vehicle2mqtt-history.js  vwgroup-vehicle2mqtt.items  vwgroup-vehicle2mqtt.things
src/vw_euda_mqtt/: __init__.py  api.py  data.py  service.py
tests/: test_api.py  test_data.py  test_service.py
tests/fixtures/: audi_dataset_redacted.json
