[project]
name = "vwgroup-vehicle2mqtt"
version = "0.2.0"
description = "Small VW Group vehicle data to MQTT bridge"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.14.0",
  "paho-mqtt>=2.0",
]

[project.scripts]
vwgroup-vehicle2mqtt = "vw_euda_mqtt.service:main"
vw-euda-mqtt = "vw_euda_mqtt.service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vw_euda_mqtt"]
